# othello

./: .gitignore  AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsolUI.cpp  ConsolUI.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameStatus.cpp  GameStatus.h  GameUI.cpp  GameUI.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Move.cpp  Move.h  Player.cpp  Player.h  Point.cpp  Point.h  RegularGameLogic.cpp  RegularGameLogic.h  RemotePlayer.cpp  RemotePlayer.h  Score.cpp  Score.h  Server.cpp  Server.h  Tile.cpp  Tile.h  gitLog.txt  main.cpp  nano.save.1
boardFiles/: almostfullboard  board2  board4
client/: Board.cpp  Board.h  Client.cpp  Client.h  ConsolUI.cpp  ConsolUI.h  Game.cpp  GameLogic.cpp  GameUI.cpp  GameUI.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Move.cpp  Move.h  Player.h  Point.cpp  Point.h  RegularGameLogic.cpp  RemotePlayer.cpp  RemotePlayer.h  Score.cpp  a.out  clientSettings  main.cpp  makefile
etc/: gitLog.txt
ex3/: Board.cpp  ConsolUI.cpp  GameLogic.cpp  GameLogic.h  Menu.h  Move.h  Player.cpp  Player.h  RegularGameLogic.cpp  RegularGameLogic.h  Score.h  Tile.h  a.out  gitC  gitLog.txt  main.cpp  makefile
ex3/boardFiles/: board1  board3  board5  board6  fullboard  nomoves
server/: AIPlayer.cpp  Board.h  Game.cpp  GameStatus.cpp  GameUI.cpp  HumanPlayer.h  Menu.cpp  Point.cpp  Point.h  RemotePlayer.cpp  RemotePlayer.h  Server.cpp  Server.h  a.out  main.cpp  makefile
test/: AIPlayerTest.cpp  AIPlayerTest.h  RegularGameLogicTest.h  test_AIPlayer.cpp  test_Board.cpp  test_GameRoom.cpp  test_RegularGameLogic.cpp  test_RegularGameLogic.h  test_ServerGames.cpp  test_main.cpp
(+86 files in other folders)
